# blaze-bot

./: README.md  pyproject.toml
bot/: main.py
