[tool.poetry]
name = "blaze-bot"
version = "0.1.0"
description = ""
authors = ["JoaoPedroArnaut <joao.silva@bandtec.com.br>"]
readme = "README.md"
packages = [{include = "blaze_bot"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
